# file_organizer

./: .gitignore  README.md  pyproject.toml
organize/: file_organizer.py  main.py
tests/: test_organizer.py
