[tool.poetry]
name = "organize"
version = "0.1.0"
description = ""
authors = ["Rasha Moumneh <rasha@rasha.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.8.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
